# video-mapping

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
src/video_mapping/: __init__.py  audio.py  canvas.py  constants.py  extract.py  layout.py  perimeter.py  render.py  types.py
src/video_mapping/cli/: audio_visualizer.py  blink_animation.py  border_run.py  draw_halves.py  extract_panes.py  half_block_beats.py  loading_animation.py  pane_scan.py  pillar_choreography.py
src/video_mapping/cli/debug/: __init__.py  draw_half_glow.py  draw_halves.py  draw_layout.py  extract_layout.py  pane_scan.py
static/: layout.json  panes.json
