[project]
name = "video-mapping"
version = "0.1.0"
description = "Programmatic drawing API for building-facade video mapping."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "basedpyright>=1.39.0",
  "imageio-ffmpeg>=0.6.0",
  "numpy>=2.4.4",
  "pillow>=12.2.0",
  "pre-commit>=4.5.1",
  "ruff>=0.15.10",
  "scipy>=1.17.1",
  "scipy-stubs>=1.17.1.3",
  "tqdm>=4.67.1",
]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = ["pre-commit>=4.5.1", "typing-extensions>=4.15.0"]

[project.scripts]
audio-visualizer = "video_mapping.cli.audio_visualizer:main"
blink-animation = "video_mapping.cli.blink_animation:main"
pillar-choreography = "video_mapping.cli.pillar_choreography:main"
half-block-beats = "video_mapping.cli.half_block_beats:main"
loading-animation = "video_mapping.cli.loading_animation:main"
debug-extract-layout = "video_mapping.cli.debug.extract_layout:main"
debug-draw-layout = "video_mapping.cli.debug.draw_layout:main"
debug-draw-half-glow = "video_mapping.cli.debug.draw_half_glow:main"
border-run = "video_mapping.cli.border_run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/video_mapping"]


[tool.basedpyright]
pythonPlatform = "All"
pythonVersion = "3.14"
typeCheckingMode = "all"

# Diagnostic behavior settings
strictListInference = false
strictDictionaryInference = false
strictSetInference = false
analyzeUnannotatedFunctions = true
strictParameterNoneValue = true
enableTypeIgnoreComments = true
enableExperimentalFeatures = false
disableBytesTypePromotions = true

# Diagnostic rules
reportAny = false
reportExplicitAny = false
reportImplicitStringConcatenation = false
reportUnreachable = "hint"
reportUnusedParameter = "hint"
reportUnannotatedClassAttribute = false
reportUnknownArgumentType = false             # consider enabling
reportUnknownVariableType = false             # consider enabling
reportUnknownMemberType = false               # consider enabling
reportUnknownParameterType = false            # consider enabling
reportUnknownLambdaType = false               # consider enabling
reportMissingTypeStubs = "information"        # consider bumping to warning/error
reportUninitializedInstanceVariable = false   # until https://github.com/DetachHead/basedpyright/issues/491
reportIncompatibleUnannotatedOverride = false # until https://github.com/DetachHead/basedpyright/issues/1349
reportMissingParameterType = false            # ruff's flake8-annotations (ANN) already covers this + gives us more control

[tool.ruff]
target-version = "py314"
line-length = 119

[tool.ruff.lint]
select = ["ALL"]
preview = true

ignore = [
  "CPY", # flake8-copyright
  "EM",  # flake8-errmsg
  "ARG", # flake8-unused-arguments
  "FIX", # flake8-fixme

  "D100",   # Missing docstring in public module
  "D104",   # Missing docstring in public package
  "D105",   # Missing docstring in magic method
  "D107",   # Missing docstring in __init__
  "D203",   # Blank line required before class docstring
  "D213",   # Multi-line summary should start at second line (incompatible with D212)
  "D301",   # Use r""" if any backslashes in a docstring
  "D417",   # Missing argument descrition in the docstring
  "DOC201", # Return is not documented in docstring
  "DOC501", # Raised exception missing from docstring

  "ANN002", # Missing type annotation for *args
  "ANN003", # Missing type annotation for **kwargs
  "ANN204", # Missing return type annotation for special method
  "ANN401", # Dynamically typed expressions (typing.Any) disallowed

  "SIM102", # use a single if statement instead of nested if statements
  "SIM108", # Use ternary operator {contents} instead of if-else-block

  "TD002", # Missing author in TODO
  "TD003", # Missing issue link on the line following this TODO

  "TRY003",  # No f-strings in raise statements
  "PLR2004", # Using unnamed numerical constants
  "E731",    # Don't asign a lambda expression, use a def
  "A005",    # Module name shadows a stdlib module
  "T201",    # Print statments
  "S404",    # Insecure module import (subprocess)

  # Conflicting rules with ruff-format:
  "COM812", # Missing trailing comma (in multi-line lists/tuples/...)
]

[tool.ruff.lint.pylint]
max-args = 20
max-branches = 20
max-returns = 20
max-statements = 250
max-locals = 20

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
line-ending = "lf"
